@@ -7,7 +7,7 @@
 \usage{
 \method{pp_check}{brmsfit}(object, type, nsamples, group = NULL, x = NULL,
   newdata = NULL, re_formula = NULL, allow_new_levels = FALSE,
-  incl_autocor = TRUE, subset = NULL, ntrys = 5, ...)
+  incl_autocor = TRUE, subset = NULL, ntrys = 5, quiet = TRUE, ...)
 }
 \arguments{
 \item{object}{An object of class \code{brmsfit}.}
@@ -63,6 +63,10 @@ for truncated discrete models only
 (defaults to \code{5}). For more details see
 \code{\link[brms:predict.brmsfit]{predict.brmsfit}}.}
 
+\item{quiet}{A flag indicating whether messages 
+produced by \pkg{ggplot2} during the plotting process 
+should be silenced. Default is \code{TRUE}.}
+
 \item{...}{Further arguments passed to the ppc functions
 of the \pkg{\link[bayesplot:bayesplot]{bayesplot}} package.}
 }
@@ -91,5 +95,6 @@ pp_check(fit, type = "error_hist", nsamples = 11)
 pp_check(fit, type = "scatter_avg", nsamples = 100)
 pp_check(fit, type = "stat_2d")
 }
+
 }
 
